Photos : fix scrollbar bug

--- a/app/pages/Photos/Photos.scss
+++ b/app/pages/Photos/Photos.scss
@@ -71,7 +71,6 @@ $spacing: 20px;
     padding: 3%;
     text-align: center;
     background: $overlay-bg;
-    z-index: 2;
 
     &-img {
       flex-grow: 1;
