--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -35,9 +35,8 @@ body {
     padding: 0 3%;
     font-size: 16px;
     line-height: 22px;
-    overflow-y: overlay;
+    overflow-y: auto;
     overflow-x: hidden;
-    z-index: 1;
 
     @include sizeMobile {
       margin-top: 0;
@@ -86,5 +85,6 @@ body {
     text-align: center;
     white-space: nowrap;
     opacity: .75;
+    z-index: -1;
   }
 }
